<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/name"
            android:gravity="start"
            android:hint="@string/enter_Name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/age"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="@string/enter_age" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/job"
            android:gravity="start"
            android:hint="@string/enter_job" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/gender"
            android:gravity="start"
            android:hint="@string/enter_gender" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/Save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:id="@+id/save"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/show_date"
                android:background="@color/colorPrimary"
                android:text="@string/showdata"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
