<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="7dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/Name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:id="@+id/name"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:id="@+id/age"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/job"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:id="@+id/job"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/Gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:id="@+id/gender"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>